[gd_scene load_steps=11 format=3 uid="uid://dp660ky27o66i"]

[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://assets/shaders/2d_outline_shader.tres" id="1_g4w48"]
[ext_resource type="Script" uid="uid://dd8s5b5bahcva" path="res://scripts/sell_portal/sell_portal.gd" id="1_q37ab"]
[ext_resource type="Resource" uid="uid://83gxhusc82ev" path="res://data/player/player_stats.tres" id="2_gmlex"]
[ext_resource type="Texture2D" uid="uid://b1ro1ssup7dcp" path="res://assets/sprites/tiles.png" id="2_se251"]
[ext_resource type="Resource" uid="uid://bei6adswdjpq4" path="res://data/unit_pool/unit_pool.tres" id="2_svd6b"]
[ext_resource type="Script" uid="uid://bijii2jph1jqd" path="res://components/outline_highlighter.gd" id="3_q37ab"]
[ext_resource type="AudioStream" uid="uid://p1b7rsqtf0cc" path="res://assets/sfx/sell.ogg" id="4_6kxgn"]
[ext_resource type="Texture2D" uid="uid://c4awhqfup7o2k" path="res://assets/sprites/gold.png" id="5_gmlex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gmlex"]
radius = 24.0

[sub_resource type="LabelSettings" id="LabelSettings_svd6b"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.627451)

[node name="SellPortal" type="Area2D"]
script = ExtResource("1_q37ab")
unit_pool = ExtResource("2_svd6b")
player_stats = ExtResource("2_gmlex")
sell_sound = ExtResource("4_6kxgn")

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("1_g4w48")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(16, 16)
texture = ExtResource("2_se251")
region_enabled = true
region_rect = Rect2(224, 512, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("CircleShape2D_gmlex")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("3_q37ab")
visuals = NodePath("../Visuals")
outline_color = Color(0.556863, 0.913725, 0.745098, 1)
outline_thickness = 2

[node name="Label" type="Label" parent="."]
offset_top = 32.0
offset_right = 36.0
offset_bottom = 50.0
text = "SELL"
label_settings = SubResource("LabelSettings_svd6b")
horizontal_alignment = 1

[node name="GoldHBox" type="HBoxContainer" parent="."]
visible = false
offset_top = 48.0
offset_right = 32.0
offset_bottom = 66.0
alignment = 1

[node name="GoldLabel" type="Label" parent="GoldHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_svd6b")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="GoldHBox"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2
texture = ExtResource("5_gmlex")
expand_mode = 1
stretch_mode = 5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
